--- a/index.html/index.html
+++ b/index.html/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Build. Learn. Replicate</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- Hero Section -->
+  <!-- HERO SECTION -->
   <section class="hero">
     <h1>Build. Learn. Replicate</h1>
     <p>Practice coding by building real project.</p>
 
     <div class="buttons">
-      <button class="btn github" onclick="openGitHub()">🐙 View on GitHub</button>
-      <button class="btn learn">Learn More</button>
+      <button class="btn github-btn">
+        <span class="github-icon">🐙</span> View on GitHub
+      </button>
+      <button class="btn learn-btn">Learn More</button>
     </div>
   </section>
 
-  <!-- Features Section -->
+  <!-- FEATURES -->
   <section class="features">
     <div class="card yellow">
       <div class="icon">💡</div>
