--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Build. Learn. Replicate</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>RepliCode</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- NAVBAR -->
+  <header class="navbar">
+    <div class="logo">RepliCode</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Features</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
 
   <!-- HERO SECTION -->
   <section class="hero">
     <h1>Build. Learn. Replicate</h1>
-    <p>Practice coding by building real project.</p>
+    <p>Practice coding by building real projects.</p>
 
     <div class="buttons">
       <button class="btn github-btn">
-        <span class="github-icon">🐙</span> View on GitHub
+        <span>🐙</span> View on GitHub
       </button>
       <button class="btn learn-btn">Learn More</button>
     </div>
@@ -23,22 +33,22 @@
 
   <!-- FEATURES -->
   <section class="features">
-    <div class="card yellow">
+    <div class="card">
       <div class="icon">💡</div>
       <h3>Learn by Doing</h3>
-      <p>Improve your coding skills through practice.</p>
+      <p>Improve your coding skills.</p>
     </div>
 
-    <div class="card blue">
+    <div class="card">
       <div class="icon">💻</div>
       <h3>Project Examples</h3>
-      <p>Study real-world coding projects.</p>
+      <p>Study real world projects.</p>
     </div>
 
-    <div class="card pink">
+    <div class="card">
       <div class="icon">⚙️</div>
       <h3>Easy to Follow</h3>
-      <p>Simple steps that are easy to learn.</p>
+      <p>Simple steps to replicate.</p>
     </div>
   </section>
 
