--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,133 +1,189 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>RepliCode</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<style>
-body{
-    font-family: Arial, sans-serif;
-    background:#ffffff;
-    margin:0;
-    text-align:center;
-}
-.navbar{
-    display:flex;
-    justify-content:space-between;
-    padding:15px 40px;
-    background:#ffffff;
-}
-.navbar a{
-    margin-left:15px;
-    text-decoration:none;
-    color:#333;
-}
-h1{
-    font-size:40px;
-    font-weight:800;
-    margin-top:60px;
-}
-.subtitle{
-    color:#555;
-    margin-bottom:30px;
-}
-.btn{
-    padding:12px 20px;
-    border:none;
-    border-radius:6px;
-    cursor:pointer;
-    margin:0 10px;
-    display:inline-flex;
-    align-items:center;
-    gap:8px;
-}
-.github-btn{
-    background:#000;
-    color:#fff;
-}
-.learn-btn{
-    background:#eaeaea;
-}
-.cards{
-    display:flex;
-    justify-content:center;
-    gap:30px;
-    padding:50px;
-    flex-wrap:wrap;
-}
-.card{
-    background:#ffffff;
-    width:260px;
-    padding:25px;
-    border-radius:14px;
-    box-shadow:0 4px 12px rgba(0,0,0,0.1);
-}
-.icon{
-    font-size:42px;
-    margin-bottom:15px;
-}
-.bulb{
-    color:#ffae00;
-}
-.computer{
-    color:#9e9e9e;
-    position:relative;
-}
-.computer::after{
-    content:"";
-    position:absolute;
-    width:18px;
-    height:12px;
-    background:#2f80ed;
-    top:12px;
-    left:12px;
-    border-radius:2px;
-}
-.settings{
-    color:#c7b7e2;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RepliCode - Build. Learn. Replicate.</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <style>
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: #ffffff;
+            margin: 0;
+            text-align: center;
+            color: #333;
+        }
+
+        /* Navbar */
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            padding: 15px 40px;
+            background: #ffffff;
+            align-items: center;
+        }
+
+        .navbar a {
+            margin-left: 15px;
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+        }
+
+        /* Hero Section */
+        h1 {
+            font-size: 48px;
+            font-weight: 800; /* Bold as requested */
+            margin-top: 60px;
+            margin-bottom: 10px;
+        }
+
+        .subtitle {
+            font-size: 18px;
+            color: #555;
+            margin-bottom: 30px;
+        }
+
+        /* Buttons */
+        .cta-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            margin-bottom: 50px;
+        }
+
+        .btn {
+            padding: 12px 24px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            font-weight: 600;
+            text-decoration: none;
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+
+        .github-btn {
+            background: #000;
+            color: #fff !important;
+        }
+
+        .learn-btn {
+            background: #eaeaea;
+            color: #333;
+        }
+
+        .btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+
+        /* Feature Cards */
+        .cards {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            padding: 20px;
+            flex-wrap: wrap;
+        }
+
+        .card {
+            background: #ffffff;
+            width: 260px;
+            padding: 30px;
+            border-radius: 20px;
+            /* Realistic deep shadow */
+            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+            transition: 0.3s;
+        }
+
+        .card:hover {
+            box-shadow: 0 15px 40px rgba(0,0,0,0.12);
+        }
+
+        .icon {
+            font-size: 50px;
+            margin-bottom: 20px;
+            display: inline-block;
+            /* Adds realistic shadow to the icon shape itself */
+            filter: drop-shadow(0 4px 6px rgba(0,0,0,0.15));
+        }
+
+        /* Specific Icon Colors */
+        .bulb {
+            /* Mixed Yellow and Orange Gradient */
+            background: linear-gradient(135deg, #ffcc00, #ff8800);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .computer {
+            color: #2f80ed; /* Plane Blue */
+        }
+
+        .settings {
+            color: #b388ff; /* Lavender / Light Purple */
+        }
+
+        p {
+            color: #666;
+            line-height: 1.5;
+        }
+    </style>
 </head>
 <body>
 
-<div class="navbar">
-    <strong>RepliCode</strong>
-    <div>
-        <a href="#">Home</a>
-        <a href="#">Features</a>
-        <a href="#">Contact</a>
-    </div>
-</div>
-
-<h1>Build. Learn. Replicate</h1>
-<div class="subtitle">Practice coding by building real projects.</div>
-
-<button class="btn github-btn">
-    <i class="fab fa-github"></i> View on GitHub
-</button>
-<button class="btn learn-btn">Learn More</button>
-
-<div class="cards">
-    <div class="card">
-        <i class="fas fa-lightbulb icon bulb"></i>
-        <h3>Learn by Doing</h3>
-        <p>Improve your coding skills.</p>
+    <div class="navbar">
+        <strong style="font-size: 1.2rem;">RepliCode</strong>
+        <div>
+            <a href="#">Home</a>
+            <a href="#">Features</a>
+            <a href="#">Contact</a>
+        </div>
     </div>
 
-    <div class="card">
-        <i class="fas fa-desktop icon computer"></i>
-        <h3>Project Examples</h3>
-        <p>Study real world projects.</p>
-    </div>
+    <header>
+        <h1>Build. Learn. Replicate.</h1>
+        <p class="subtitle">Practice coding by building real projects.</p>
 
-    <div class="card">
-        <i class="fas fa-cog icon settings"></i>
-        <h3>Easy to Follow</h3>
-        <p>Simple steps to replicate.</p>
-    </div>
-</div>
+        <div class="cta-buttons">
+            <a href="https://github.com/karthikagangaraju-bot" target="_blank" class="btn github-btn">
+                <i class="fab fa-github"></i> View on GitHub
+            </a>
+            <a href="#" class="btn learn-btn">Learn More</a>
+        </div>
+    </header>
+
+    <section class="cards">
+        <div class="card">
+            <i class="fas fa-lightbulb icon bulb"></i>
+            <h3>Learn by Doing</h3>
+            <p>Improve your coding skills.</p>
+        </div>
+
+        <div class="card">
+            <i class="fas fa-laptop icon computer"></i>
+            <h3>Project Examples</h3>
+            <p>Study real world projects.</p>
+        </div>
+
+        <div class="card">
+            <i class="fas fa-cog icon settings"></i>
+            <h3>Easy to Follow</h3>
+            <p>Simple steps to replicate.</p>
+        </div>
+    </section>
+
+    <script>
+        // Smooth scroll for Learn More button
+        document.querySelector('.learn-btn').addEventListener('click', (e) => {
+            e.preventDefault();
+            document.querySelector('.cards').scrollIntoView({ behavior: 'smooth' });
+        });
+    </script>
 
 </body>
 </html>
-```
